--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "eslint": "^8.52.0"
     },
     "engines": {
-        "node": ">=20.0.0"
+        "node": "20.x"
     },
     "author": "",
     "license": "ISC"
